--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <span class="studio-link">Studio</span>
             </a>
             <nav class="menu">
-              <ul class="menu-list">
+              <ul class="menu__list">
                 <li>
                   <a href="index.html" class="menu-item-agencja">Agencja</a>
                 </li>
