--- a/portfolio.html
+++ b/portfolio.html
@@ -25,33 +25,35 @@
     <header>
       <div class="page-header">
         <div class="container">
-          <div class="header-content">
-            <a href="/WebStudio/" class="webstudio-link">
-              <span class="web-link">Web</span>
-              <span class="studio-link">Studio</span>
+          <nav class="menu-nav">
+            <a href="/WebStudio/" class="logo">
+              <span class="logo--webtext">Web</span>
+              <span class="logo--linktext">Studio</span>
             </a>
-            <nav class="menu">
-              <ul class="menu-list">
-                <li><a href="index.html" class="menu-item">Agencja</a></li>
-                <li>
-                  <a href="portfolio.html" class="menu-item-portfolio">Portfolio</a>
-                </li>
-                <li><a href="/Kontakt/" class="menu-item">Kontakt</a></li>
-              </ul>
-            </nav>
+            <ul class="menu-nav__list">
+              <li class="menu-nav__item">
+                <a href="index.html" class="menu-item">Agencja</a>
+              </li>
+              <li class="menu-nav__item">
+                <a href="portfolio.html" class="menu-item-mark">Portfolio</a>
+              </li>
+              <li class="menu-nav__item">
+                <a href="/Kontakt/" class="menu-item">Kontakt</a>
+              </li>
+            </ul>
             <a href="mailto:info@devstudio.com" class="email">
-              <svg class="head-email-icon">
+              <svg class="email__icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
             </a>
             <a href="tel:+48111111111" class="phone">
-              <svg class="head-phone-icon">
+              <svg class="phone__icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +48 111 111 111
             </a>
-          </div>
+          </nav>
         </div>
       </div>
     </header>
