--- a/portfolio.html
+++ b/portfolio.html
@@ -274,81 +274,87 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <div class="footer-data">
-          <div class="footer-logo">
-            <a href="/WebStudio/" class="footer-logo">
-              <span class="web-link">Web</span>
-              <span class="studio-link-footer">Studio</span>
-            </a>
-          </div>
-          <div class="footer-address-container">
-            <address class="footer-address">
-              <p class="address-text">m. Warszawa, Aleje Jerozolimskie 21</p>
-              <p class="footer-email">
-                <a href="mailto:info@devstudio.com" class="footer-email"
-                  >info@devstudio.com</a
-                >
-              </p>
-              <p class="footer-phone">
-                <a href="tel:+48111111111" class="footer-phone"
-                  >+48 111 111 111</a
-                >
-              </p>
-            </address>
-          </div>
+        <div class="footer-contact">
+          <a href="/WebStudio/" class="footer-logo">
+            <span class="footer-logo footer-logo--webtext">Web</span>
+            <span class="footer-logo footer-logo--linktext">Studio</span>
+          </a>
+
+          <p class="footer-contact__address">
+            m. Warszawa, Aleje Jerozolimskie 21
+          </p>
+          <p class="footer-contact__email">
+            <a
+              href="mailto:info@devstudio.com"
+              class="footer-contact__email footer-contact__email--text"
+              >info@devstudio.com</a
+            >
+          </p>
+          <p class="footer-contact__phone">
+            <a href="tel:+48111111111" class="footer-contact__phone footer-contact__phone--text"
+              >+48 111 111 111</a
+            >
+          </p>
         </div>
-        <div class="footer-social-media-container">
-          <p class="footer-social-media-text">DOŁĄCZ DO NAS</p>
-          <ul class="footer-social-media-list">
-            <li class="footer-social-list-item_link">
-              <a class="footer-social-list-link" href="#">
-                <svg class="footer-social-icon">
+        <div class="footer-social">
+          <p class="footer-social__title">DOŁĄCZ DO NAS</p>
+          <ul class="footer-social__list">
+            <li class="footer-social__list_item">
+              <a class="footer-social__link_item" href="#">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list-item_link">
-              <a class="footer-social-list-link" href="#">
-                <svg class="social-icon">
+            <li class="footer-social__list_item">
+              <a class="footer-social__link_item" href="#">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list-item_link">
-              <a class="footer-social-list-link" href="#">
-                <svg class="social-icon">
+            <li class="footer-social__list_item">
+              <a class="footer-social__link_item" href="#">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-list-item_link">
-              <a class="footer-social-list-link" href="#">
-                <svg class="social-icon">
+            <li class="footer-social__list_item">
+              <a class="footer-social__link_item" href="#">
+                <svg class="footer-social__icon">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="footer-newsletter">
-          <p class="footer-newsletter-title">zapisz się do newslettera</p>
-          <form name="signup_form" autocomplete="on" novalidate>
-            <label class="footer-newsletter-label">
-              <input
-                class="footer-newsletter-input"
-                type="email"
-                name="email"
-                placeholder="E-mail"
-              />
-            </label>
-            <button class="footer-newsletter-button" type="submit">
-              <p class="footer-newsletter-button-text">Zapisz się</p>
-              <svg class="icon-icon-send">
-                <use href="./images/icons.svg#icon-icon-send"></use>
-              </svg>
-            </button>
-          </form>
-        </div>
+
+        <form
+          class="form-newsletter"
+          name="signup_form"
+          autocomplete="on"
+          novalidate
+        >
+          <label class="form-newsletter__label" for="footer-newsletter">
+            zapisz się do newslettera
+          </label>
+          
+          <input
+            class="form-newsletter__input"
+            id="footer-newsletter"
+            type="email"
+            name="email"
+            placeholder="E-mail"
+          />
+
+          <button class="button" type="submit">
+            <p class="button__text">Zapisz się</p>
+            <svg class="button__icon">
+              <use href="./images/icons.svg#icon-icon-send"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
