--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
       </div>
     </header>
     <main>
-      <div class="head-background">
+      <div class="head-overlay">
         <div class="container">
-          <p class="head-text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</p>
-          <button class="head-button" type="button" data-modal-open>
-            Zamów usługę
+          <p class="head-overlay__text">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</p>
+          <button class="button" type="submit">
+            <p class="button__text">Zamów usługę</p>
           </button>
         </div>
       </div>
@@ -124,49 +124,49 @@
       </section>
       <section class="section">
         <div class="container">
-          <h2 class="services-header">Czym się zajmujemy</h2>
-          <ul class="services-list">
-            <li class="service">
-              <div class="services-label">
+          <h2 class="section-title">Czym się zajmujemy</h2>
+          <ul class="card-list">
+            <li class="card-list__item">
+              <div class="card-list__label">
                 <img
                   src="images/img7.jpg"
                   width="370"
                   height="294"
                   alt="programmer working his desk"
                 />
-                <p class="services-label-text">aplikacje komputerowe</p>
+                <p class="card-list__text">aplikacje komputerowe</p>
               </div>
             </li>
-            <li class="service">
-              <div class="services-label">
+            <li class="card-list__item">
+              <div class="card-list__label">
                 <img
                   src="images/img5.jpg"
                   width="370"
                   height="294"
-                  alt="web ui designers are developing application smartphones team creators"
+                  alt="programmer working his desk"
                 />
-                <p class="services-label-text">aplikacje mobilne</p>
+                <p class="card-list__text">aplikacje komputerowe</p>
               </div>
             </li>
-            <li class="service">
-              <div class="services-label">
+            <li class="card-list__item">
+              <div class="card-list__label">
                 <img
                   src="images/img6.jpg"
                   width="370"
                   height="294"
-                  alt="creative artist web sedign with working colour selection graphic tablet"
+                  alt="programmer working his desk"
                 />
-                <p class="services-label-text">rozwiązania graficzne</p>
+                <p class="card-list__text">aplikacje komputerowe</p>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <section class="section-our-team">
-        <h2 class="services-header">Nasz zespół</h2>
+      <section class="section">
+        <h2 class="section-title">Nasz zespół</h2>
         <div class="container">
-          <div class="services-list">
-            <figure class="card">
+          <div class="card-list">
+            <figure class="card__item card__item--figure">
               <img
                 src="images/img1.jpg"
                 width="270"
@@ -174,32 +174,32 @@
                 alt="John Doe product designer"
               />
               <figcaption class="figcaption">
-                <h2 class="member">John Doe</h2>
-                <p class="function">Product Designer</p>
-                <ul class="social-list-list">
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                <h2 class="figcaption__member">John Doe</h2>
+                <p class="figcaption__function">Product Designer</p>
+                <ul class="social-links">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -208,7 +208,7 @@
                 </ul>
               </figcaption>
             </figure>
-            <figure class="card">
+            <figure class="card__item card__item--figure">
               <img
                 src="images/img2.jpg"
                 width="270"
@@ -216,32 +216,32 @@
                 alt="John Doe frontend developer"
               />
               <figcaption class="figcaption">
-                <h2 class="member">John Doe</h2>
-                <p class="function">Frontend Developer</p>
-                <ul class="social-list-list">
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                <h2 class="figcaption__member">John Doe</h2>
+                <p class="figcaption__function">Frontend Developer</p>
+                <ul class="social-links">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -250,7 +250,7 @@
                 </ul>
               </figcaption>
             </figure>
-            <figure class="card">
+            <figure class="card__item card__item--figure">
               <img
                 src="images/img3.jpg"
                 width="270"
@@ -258,32 +258,32 @@
                 alt="John Doe marketing"
               />
               <figcaption class="figcaption">
-                <h2 class="member">John Doe</h2>
-                <p class="function">Marketing</p>
-                <ul class="social-list-list">
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                <h2 class="figcaption__member">John Doe</h2>
+                <p class="figcaption__function">Marketing</p>
+                <ul class="social-links">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -292,7 +292,7 @@
                 </ul>
               </figcaption>
             </figure>
-            <figure class="card">
+            <figure class="card__item card__item--figure">
               <img
                 src="images/img4.jpg"
                 width="270"
@@ -300,32 +300,32 @@
                 alt="John Doe UI Designer"
               />
               <figcaption class="figcaption">
-                <h2 class="member">John Doe</h2>
-                <p class="function">UI Designer</p>
-                <ul class="social-list-list">
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                <h2 class="figcaption__member">John Doe</h2>
+                <p class="figcaption__function">UI Designer</p>
+                <ul class="social-links">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-list-item_link">
-                    <a class="social-list-link" href="#">
+                  <li class="social-links__item">
+                    <a class="social-links__link" href="#">
                       <svg class="social-icon">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -338,46 +338,46 @@
         </div>
       </section>
       <section class="section">
-        <h2 class="services-header">Nasi klienci</h2>
+        <h2 class="section-title">Nasi klienci</h2>
         <div class="container">
-          <ul class="client-list">
-            <li class="client-list-item">
-              <a class="client-list-link" href="#">
+          <ul class="card-list card-list--client">
+            <li class="card-list__item card-list__item--client">
+              <a class="card-list__link card-list__link--client" href="#">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="client-list-link" href="#">
+            <li class="card-list__item card-list__item--client">
+              <a class="card-list__link card-list__link--client" href="#">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="client-list-link" href="#">
+            <li class="card-list__item card-list__item--client">
+              <a class="card-list__link card-list__link--client" href="#">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="client-list-link" href="#">
+            <li class="card-list__item card-list__item--client">
+              <a class="card-list__link card-list__link--client" href="#">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="client-list-link" href="#">
+            <li class="card-list__item card-list__item--client">
+              <a class="card-list__link card-list__link--client" href="#">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-list-item">
-              <a class="client-list-link" href="#">
+            <li class="card-list__item card-list__item--client">
+              <a class="card-list__link card-list__link--client" href="#">
                 <svg class="client-icon">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
                 </svg>
@@ -463,9 +463,9 @@
             placeholder="E-mail"
           />
 
-          <button class="button" type="submit">
-            <p class="button__text">Zapisz się</p>
-            <svg class="button__icon">
+          <button class="button button--newsletter" type="submit">
+            <p class="button__text button__text--newsletter">Zapisz się</p>
+            <svg class="button__icon button__icon--newsletter">
               <use href="./images/icons.svg#icon-icon-send"></use>
             </svg>
           </button>
