--- a/portfolio.html
+++ b/portfolio.html
@@ -27,8 +27,8 @@
         <div class="container">
           <nav class="menu-nav">
             <a href="/WebStudio/" class="logo">
-              <span class="logo--webtext">Web</span>
-              <span class="logo--linktext">Studio</span>
+              <span class="logo logo--webtext">Web</span>
+              <span class="logo logo--linktext">Studio</span>
             </a>
             <ul class="menu-nav__list">
               <li class="menu-nav__item">
