--- a/portfolio.html
+++ b/portfolio.html
@@ -60,13 +60,23 @@
     <main>
       <section class="section">
         <div class="container">
-          <div class="btn-group">
-            <button class="button">Wszystkie</button>
-            <button class="button">Strony</button>
-            <button class="button">Aplikacje</button>
-            <button class="button">Design</button>
-            <button class="button">Marketing</button>
-          </div>
+          <ul class="button-group">
+            <button class="button-group__item">
+              <p class="button-group__text">Wszystkie</p>
+            </button>
+            <button class="button-group__item">
+              <p class="button-group__text">Strony</p>
+            </button>
+            <button class="button-group__item">
+              <p class="button-group__text">Aplikacje</p>
+            </button>
+            <button class="button-group__item">
+              <p class="button-group__text">Design</p>
+            </button>
+            <button class="button-group__item">
+              <p class="button-group__text">Marketing</p>
+            </button>
+          </ul>
           <div class="portfolio-cards">
             <figure class="portfolio-card">
               <div class="img-portfolio-card">
